start writing about igroteka, small changes to about page and footer

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -23,9 +23,10 @@ one of the best e-commerce products out there - and I promise to write more abou
 
 ## Hobbies
 
-When I am not working, I dedicate most of my time to my family (I have a wonderful
-daughter). Other than that, I like to travel, play videogames and read.
+I dedicate most of my free time to my beautiful family. Other than that, I like to
+travel, play videogames and read.
 
-You can find my travels map on my [hamster-travel profile](https://travel.hmstr.rocks/ru/users/191#!/map) and
-books I read on my [goodreads profile](https://www.goodreads.com/user/show/4208481-andrey-marchenko).
-I hope to integrate more of this data into this website in the future.
+You can find my travels map on my [hamster-travel profile](https://travel.hmstr.rocks/ru/users/191#!/map).
+Books I read are on my [goodreads profile](https://www.goodreads.com/user/show/4208481-andrey-marchenko).
+I play single player and story driven videogames on PS5, Xbox Series X and Nintendo Switch
+consoles (you can have a sneak peek into how I manage my gaming backlog [here](/igroteka)).
