--- a/content/pages/hamster-travel/index.mdx
+++ b/content/pages/hamster-travel/index.mdx
@@ -3,4 +3,4 @@ title: Hamster Travel
 slug: '/hamster-travel'
 ---
 
-Here will be information about the hamster travel project
+Here will be information about the hamster travel project.
