--- a/content/pages/igroteka/index.mdx
+++ b/content/pages/igroteka/index.mdx
@@ -16,7 +16,7 @@ ways to do that: using your note taking app (like
 [Trello](https://trello.com/power-ups/5e32b07c80a9cd1d0e7e5e8e/gaming-backlog) or
 [Notion](https://www.notion.so/Video-game-tracker-7adee9d8f02d485793fd4503b60e591d))
 or specialised app (like [GameTrack](https://gametrack.app) or [Grouvee](https://www.grouvee.com)).
-None of these worked for me though: I couldn't get myself to use it. The only solution
+None of these worked for me though: I couldn't get myself to use them. The only solution
 left is to build it myself!
 
 ### Features
