add react-feather and LinkWIthIcon component

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -11,7 +11,7 @@ I'm passionate about software craftsmanship and I like to build things. I enjoy
 solving challenging engineering puzzles, working with data and creating products
 that makes peoples' lives better. I have the most experience in Ruby, Elixir and
 JavaScript (react/vue), but I consider myself to be a software engineer in general,
-not constrained by particular language or technology.
+not constrained by a particular language or technology.
 
 I like to build side projects too. Currently I am creating [Hamster Travel](/hamster-travel)
 to manage my travel planning and [Igroteka](/igroteka) to manage my gaming backlog.
