links for projject pages

--- a/content/pages/hamster-travel/index.mdx
+++ b/content/pages/hamster-travel/index.mdx
@@ -3,6 +3,16 @@ title: Hamster Travel
 slug: '/hamster-travel'
 ---
 
+<ProjectLinks
+  links={[
+    {
+      type: 'website',
+      url: 'https://travel.hmstr.rocks/en/landing',
+      label: 'Hamster Travel',
+    },
+  ]}
+></ProjectLinks>
+
 Traveling is one of my biggest passions in life (besides programming). It also became the main theme for my very first side project - our very own travel planning application that we create with my wife since 2014. It allows us to create plans what to visit, track our flights and hotels and most importantly calculates an overall budget for a trip. We have been using this app for many years now and it became an essential tool in our lives.
 
 ### Features
