--- a/content/pages/igroteka/index.mdx
+++ b/content/pages/igroteka/index.mdx
@@ -3,6 +3,26 @@ title: Igroteka
 slug: '/igroteka'
 ---
 
+<ProjectLinks
+  links={[
+    {
+      type: 'website',
+      url: 'https://igroteka.de',
+      label: 'Igroteka',
+    },
+    {
+      type: 'github',
+      url: 'https://github.com/altmer/igroteka',
+      label: 'Frontend code',
+    },
+    {
+      type: 'github',
+      url: 'https://github.com/altmer/skaro',
+      label: 'Backend code',
+    },
+  ]}
+></ProjectLinks>
+
 Gaming backlog. A [lot](https://kotaku.com/how-to-chip-away-at-a-massive-games-backlog-1845794480)
 [is](https://www.wired.com/story/get-through-overflowing-game-library-game-backlog/)
 [written](https://www.online-tech-tips.com/gaming/6-tips-to-manage-your-massive-gaming-backlog/)
