publish dynamic pricing blogpost and update npm packages

--- a/content/pages/igroteka/index.mdx
+++ b/content/pages/igroteka/index.mdx
@@ -13,12 +13,12 @@ slug: '/igroteka'
     {
       type: 'github',
       url: 'https://github.com/altmer/igroteka',
-      label: 'Frontend code',
+      label: 'Frontend',
     },
     {
       type: 'github',
       url: 'https://github.com/altmer/skaro',
-      label: 'Backend code',
+      label: 'Backend',
     },
   ]}
 ></ProjectLinks>
